--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
+  --secondray-font-size: 20px;
+  --secondray-font-weight: 400;
+  --secondray-line-height: 150%;
+  --secondray-text-color: #111111;
+   --secondray-font-fam : 'Montserrat', sans-serif;
 }
 
 * {
@@ -8,5 +15,36 @@
   box-sizing: border-box;
 }
 
-.primary-text {
+.secondary-para-tag {
+  font-size: var(--secondray-font-size);
+  font-weight: var(--secondray-font-weight);
+  line-height: var(--secondray-line-height);
+  color: var(--secondray-text-color);
+  font-family: var(--secondray-font-fam);
 }
+
+ 
+/* Extra small devices (phones, 600px and down)  */
+@media only screen and (max-width: 600px) {
+
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) { 
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+} 
