cta section pushed

--- a/src/components/banner/bannersection.css
+++ b/src/components/banner/bannersection.css
@@ -1,68 +1,74 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+  .main{
+    width: 90%;
+  }
   .banner-container {
     display: grid;
-    height: 656px;
+    width: 100;
+
   }
+
   .empty {
     height: 110px;
     background-color: white;
   }
+
   .primary-heading.white {
     color: white;
+    padding: 10px 0;
+
   }
-  .graduate.png{
+
+  .graduate.png {
     background-color: white;
   }
+
   .secondary-paragraph.white {
     color: white;
+    line-height: 150%;
+    letter-spacing: 1px;
   }
+
   .coloured-bg {
     background-color: #841d2e;
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 10px;
-    grid-row-gap: 0px;
-    height: 546px;
-    position: relative;
+    grid-row-gap: 0px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 600px;
   }
+
   .left {
-    padding: 0px 30px;
+    padding: 0px 29px;
+    margin: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: white;
+    gap: 30px;
+
   }
 
   .right {
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    height: 100%; /* ensures the .right fills .coloured-bg */
-    padding-bottom: 0; /* you can adjust this if needed */
-    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .right img {
-    height: 656px;
-    position: absolute;
+    height: 276px;
+    position: relative;
+    right: 20px;
+
   }
+
   .shades {
     position: absolute;
     bottom: 0;
@@ -79,6 +85,408 @@
     width: 450px;
     right: 5px;
     bottom: 10px;
+  }
+
+  .button-styles {
+    width: 70%;
+  }
+
+  .arrow-icon {
+    padding: 1px;
+    border-radius: 50%;
+    background-color: var(--primary-background-color);
+
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .banner-container {
+    display: grid;
+    height: 656px;
+
+  }
+
+  .empty {
+    height: 110px;
+    background-color: white;
+  }
+
+  .primary-heading.white {
+    color: white;
+    padding: 10px 0;
+
+  }
+
+  .graduate.png {
+    background-color: white;
+  }
+
+  .secondary-paragraph.white {
+    color: white;
+    line-height: 150%;
+    letter-spacing: 1px;
+  }
+
+  .coloured-bg {
+    background-color: #841d2e;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    height: 546px;
+    /* position: relative; */
+  }
+
+  .left {
+    padding: 0px 25px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    gap: 30px;
+
+  }
+
+  .right {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 100%;
+    /* ensures the .right fills .coloured-bg */
+    padding-bottom: 0;
+    /* you can adjust this if needed */
+    position: relative;
+  }
+
+  .right img {
+    height: 656px;
+    position: absolute;
+  }
+
+  .shades {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+  }
+
+  .shades img {
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .shades img:nth-child(1) {
+    width: 450px;
+    right: 5px;
+    bottom: 10px;
+  }
+
+  .button-styles {
+    width: 35%;
+  }
+
+  .arrow-icon {
+    padding: 3px;
+    border-radius: 50%;
+    background-color: var(--primary-background-color);
+
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+ .banner-container {
+    display: grid;
+    height: 656px;
+
+  }
+
+  .empty {
+    height: 110px;
+    background-color: white;
+  }
+
+  .primary-heading.white {
+    color: white;
+    padding: 10px 0;
+
+  }
+
+  .graduate.png {
+    background-color: white;
+  }
+
+  .secondary-paragraph.white {
+    color: white;
+    line-height: 150%;
+    letter-spacing: 1px;
+  }
+
+  .coloured-bg {
+    background-color: #841d2e;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    height: 506px;
+    position: relative;
+  }
+
+  .left {
+    padding: 0px 30px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    gap: 30px;
+
+  }
+
+  .right {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 100%;
+    /* ensures the .right fills .coloured-bg */
+    padding-bottom: 0;
+    /* you can adjust this if needed */
+    position: relative;
+  }
+
+  .right img {
+    height: 596px;
+    position: absolute;
+    right: -0px;
+  }
+
+  .shades {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+  }
+
+  .shades img {
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .shades img:nth-child(1) {
+    width: 450px;
+    right: 5px;
+    bottom: 10px;
+  }
+
+  .button-styles {
+    width: 70%;
+  }
+
+  .arrow-icon {
+    padding: 3px;
+    border-radius: 50%;
+    background-color: var(--primary-background-color);
+
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .banner-container {
+    display: grid;
+    height: 656px;
+
+  }
+
+  .empty {
+    height: 110px;
+    background-color: white;
+  }
+
+  .primary-heading.white {
+    color: white;
+    padding: 10px 0;
+
+  }
+
+  .graduate.png {
+    background-color: white;
+  }
+
+  .secondary-paragraph.white {
+    color: white;
+    line-height: 150%;
+    letter-spacing: 1px;
+  }
+
+  .coloured-bg {
+    background-color: #841d2e;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    height: 506px;
+    position: relative;
+  }
+
+  .left {
+    padding: 0px 30px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    gap: 30px;
+
+  }
+
+  .right {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 100%;
+    /* ensures the .right fills .coloured-bg */
+    padding-bottom: 0;
+    /* you can adjust this if needed */
+    position: relative;
+  }
+
+  .right img {
+    height: 596px;
+    position: absolute;
+  }
+
+  .shades {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+  }
+
+  .shades img {
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .shades img:nth-child(1) {
+    width: 450px;
+    right: 5px;
+    bottom: 10px;
+  }
+
+  .button-styles {
+    width: 70%;
+  }
+
+  .arrow-icon {
+    padding: 3px;
+    border-radius: 50%;
+    background-color: var(--primary-background-color);
+
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .banner-container {
+    display: grid;
+    height: 656px;
+    background-color: red;
+
+  }
+
+  .empty {
+    height: 110px;
+    background-color: white;
+  }
+
+  .primary-heading.white {
+    color: white;
+    padding: 10px 0;
+
+  }
+
+  .graduate.png {
+    background-color: white;
+  }
+
+  .secondary-paragraph.white {
+    color: white;
+    line-height: 150%;
+    letter-spacing: 1px;
+  }
+
+  .coloured-bg {
+    background-color: #841d2e;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    height: 546px;
+    position: relative;
+  }
+
+  .left {
+    padding: 0px 25px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    gap: 30px;
+
+  }
+
+  .right {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 100%;
+    /* ensures the .right fills .coloured-bg */
+    padding-bottom: 0;
+    /* you can adjust this if needed */
+    position: relative;
+  }
+
+  .right img {
+    height: 656px;
+    position: absolute;
+  }
+
+  .shades {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+  }
+
+  .shades img {
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .shades img:nth-child(1) {
+    width: 450px;
+    right: 5px;
+    bottom: 10px;
+  }
+
+  .button-styles {
+    width: 50%;
+    /* padding: 0 20px ; */
+  }
+
+  .arrow-icon {
+    padding: 3px;
+    border-radius: 50%;
+    background-color: var(--primary-background-color);
+
   }
 
   /* .shades img:nth-child(2) {
