--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -12,7 +12,7 @@
   .content-part2 {
     padding: 20px;
     overflow-y: auto;
-    max-height: 100vh;
+    /* max-height: 100vh; */
   }
 
   .secondary-arrow-styles {
@@ -82,7 +82,7 @@
   .content-part2 {
     padding: 20px;
     overflow-y: auto;
-    max-height: 100vh;
+    /* max-height: 100vh; */
   }
   .secondary-arrow-styles {
     width: 24px;
@@ -156,7 +156,7 @@
   .content-part2 {
     padding: 20px;
     overflow-y: auto;
-    max-height: 100vh;
+    /* max-height: 100vh; */
   }
   .button {
     display: flex;
@@ -229,7 +229,7 @@
   .content-part2 {
     padding: 20px;
     overflow-y: auto;
-    max-height: 100vh;
+    /* max-height: 100vh; */
   }
   .button {
     display: flex;
@@ -305,7 +305,7 @@
   .content-part2 {
     padding: 20px;
     overflow-y: auto;
-    max-height: 100vh;
+    /* max-height: 100vh; */
   }
   .button {
     display: flex;
